# kiwi-stackbuild-plugin

./: .bumpversion.cfg  .virtualenv.dev-requirements.txt  .virtualenv.requirements.txt  MANIFEST.in  Makefile  README.md  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: ci-publish-to-pypi.yml
doc/source/: commands.rst  conf.py
doc/source/commands/: system_stackbuild.rst  system_stash.rst
kiwi_rebuild_plugin/: kiwi.rnc  root_cache.py  schema.rnc  version.py  xml_merge.py
kiwi_rebuild_plugin/tasks/: system_rebuild.py
kiwi_stackbuild_plugin/: cli.py  defaults.py  exceptions.py  kiwi-fake-schema.rnc  kiwi-fake-schema.rng  schema.rnc  schema.rng  version.py  xml_merge.py
kiwi_stackbuild_plugin/tasks/: system_stackbuild.py  system_stash.py
package/: python-kiwi_stackbuild_plugin-spec-template  python-kiwi_stackbuild_plugin.changes
test/data/image-root-invalid-name/image/: config.xml
test/data/image-root/image/: config.xml
test/data/kiwi-description/: config.xml
test/data/stackbuild-description/: config.kiwi
test/unit/: defaults_test.py  xml_merge_test.py
test/unit/tasks/: system_stackbuild_test.py  system_stash_test.py
